--- a/cc_connect/message_board/templates/message_board/message_board.html
+++ b/cc_connect/message_board/templates/message_board/message_board.html
@@ -6,6 +6,7 @@
     <title>Community Message Board</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/message_board.css' %}">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body class="message-board-body">
 
@@ -40,26 +41,37 @@
         margin-left: auto;
         flex-shrink: 0;
     ">
-        <a href="{% url 'overview' %}" style="color: white; text-decoration: none; font-size: 14px;">Overview</a>
-        <a href="{% url 'message_board' %}" style="color: white; text-decoration: none; font-size: 14px;">Message Board</a>
-        <a href="{% url 'business_home' %}" style="color: white; text-decoration: none; font-size: 14px;">Businesses</a>
-        <a href="{% url 'map' %}" style="color: white; text-decoration: none; font-size: 14px;">Map </a>
+    <a href="{% url 'overview' %}" style="color: white; text-decoration: none; font-size: 14px; display: flex; align-items: center;">
+        <i class="fas fa-home" style="margin-right: 5px;"></i> Overview
+    </a>
+    <a href="{% url 'message_board' %}" style="color: white; text-decoration: none; font-size: 14px; display: flex; align-items: center;">
+        <i class="fas fa-comments" style="margin-right: 5px;"></i> Message Board
+    </a>
+    <a href="{% url 'business_home' %}" style="color: white; text-decoration: none; font-size: 14px; display: flex; align-items: center;">
+        <i class="fas fa-store" style="margin-right: 5px;"></i> Businesses
+    </a>
+    <a href="{% url 'map' %}" style="color: white; text-decoration: none; font-size: 14px; display: flex; align-items: center;">
+        <i class="fas fa-map-marker-alt" style="margin-right: 5px;"></i> Map
+    </a>
         <!-- Profile Icon -->
-        <a href="#" onclick="openProfileModal()" style="
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 40px;
-            height: 40px;
-            background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9);
-            color: white;
-            border-radius: 50%;
-            text-decoration: none;
-        ">
-            <i class="fa-solid fa-user" style="font-size: 18px;"></i>
-        </a>
+        <!-- Profile Icon -->
+<a href="#" onclick="openProfileModal()" style="
+display: flex;
+justify-content: center;
+align-items: center;
+width: 40px;
+height: 40px;
+background: none;
+color: white;
+border-radius: 50%;
+text-decoration: none;
+">
+<i class="fas fa-user" style="font-size: 18px;"></i>
+</a>
+
     </div>
 </nav>
+
 
 
     <!-- Main Content -->
