Global shared template to avoid machine-dependent reference errors

--- a/cc_connect/businesses/templates/businesses/home.html
+++ b/cc_connect/businesses/templates/businesses/home.html
@@ -165,7 +165,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    {% include '/Users/masonwilson/Desktop/ELVA 340/cross_cultural_connect/cc_connect/accounts/templates/shared/navbar.html' %}
+    {% include 'shared/navbar.html' %}
     
     
      <!-- Welcome Section -->
