--- a/cc_connect/message_board/templates/message_board/message_board.html
+++ b/cc_connect/message_board/templates/message_board/message_board.html
@@ -11,7 +11,7 @@
 <body class="message-board-body">
 
      <!-- Navigation Bar -->
-     {% include '/Users/masonwilson/Desktop/ELVA 340/cross_cultural_connect/cc_connect/accounts/templates/shared/navbar.html' %}
+     {% include 'shared/navbar.html' %}
 
 
 
