--- a/cc_connect/businesses/templates/businesses/map.html
+++ b/cc_connect/businesses/templates/businesses/map.html
@@ -93,7 +93,7 @@
 </head>
 <body>
 
-    {% include '/Users/masonwilson/Desktop/ELVA 340/cross_cultural_connect/cc_connect/accounts/templates/shared/navbar.html' %}
+    {% include 'shared/navbar.html' %}
 
 
     <!-- Page Header -->
