--- a/cc_connect/businesses/templates/businesses/search_results.html
+++ b/cc_connect/businesses/templates/businesses/search_results.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <!-- Navbar -->
-    {% include '/Users/masonwilson/Desktop/ELVA 340/cross_cultural_connect/cc_connect/accounts/templates/shared/navbar.html' %}
+    {% include 'shared/navbar.html' %}
 
 
     <!-- Header -->
