Account management page

--- a/cc_connect/templates/shared/navbar.html
+++ b/cc_connect/templates/shared/navbar.html
@@ -24,7 +24,7 @@
         <a href="{% url 'map' %}" class="navbar-link">
             <i class="fas fa-map-marker-alt navbar-icon"></i> Map
         </a>
-        <a href="#" onclick="openProfileModal()" class="profile-icon">
+        <a href="{% url 'account_management' %}" class="profile-icon">
             <i class="fas fa-user"></i>
         </a>
     </div>
